modified:   .project 	modified:   app/src/main/res/layout/message_item.xml 	modified:   app/src/main/res/layout/message_item_compact.xml 	modified:   app/src/main/res/values/colors.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   gradle/wrapper/gradle-wrapper.properties

--- a/app/src/main/res/layout/message_item_compact.xml
+++ b/app/src/main/res/layout/message_item_compact.xml
@@ -39,7 +39,7 @@
         tools:src="@drawable/gotify"
         android:contentDescription="@string/message_image_desc"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
