--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
     <color name="swipeIcon">#FFFFFF</color>
     <!-- 超链接文本颜色修改为橙色 -->
     <color name="hyperLink">#FFA726</color>
+    
+    <!-- 展开按钮颜色定义 - Dark主题 -->
+    <color name="expand_button_light_background">#80333333</color> <!-- 半透明深灰色 -->
+    <color name="expand_button_disabled_background">#60333333</color> <!-- 更透明的深灰色 -->
 </resources>
